[package]
name = "ssh-agent-notify"
version = "0.1.0"
authors = ["Toru Ogawa <Hakuyume@users.noreply.github.com>"]
edition = "2018"

[dependencies]
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat", "io-compat"] }
rfc4251 = { path = "../rfc4251" }
serde = { version = "1.0", features=["derive"] }
ssh-agent-sys = { path = "../ssh-agent-sys" }
tempfile = "3.0"
tokio = "0.1"
