[package]
name = "ssh-agent-notify"
version = "0.1.0"
authors = ["Toru Ogawa <Hakuyume@users.noreply.github.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
clap = "2.33"
env_logger = "0.6"
failure = "0.1"
futures-preview = { version = "=0.3.0-alpha.17", features = ["compat", "io-compat"] }
libnotify = "1.0"
log = "0.4"
rfc4251 = { path = "../rfc4251" }
serde = { version = "1.0", features=["derive"] }
sha2 = "0.8"
ssh-agent-sys = { path = "../ssh-agent-sys" }
tokio = "0.1"
tokio-signal = "0.2"
